learned some basic API with express lecture 50

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "empovment of my skill",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/RavindraLodhi/neture_learning/issues"
   },
-  "homepage": "https://github.com/RavindraLodhi/neture_learning#readme"
+  "homepage": "https://github.com/RavindraLodhi/neture_learning#readme",
+  "dependencies": {
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
+  }
 }
