--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=prod & nodemon server.js"
+    "start:prod": "SET NODE_ENV=prod & nodemon server.js",
+    "debug" : "ndb server.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,9 @@
     "express": "^4.17.2",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "slugify": "^1.6.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
